<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFA941"
    android:id="@+id/lsLayout"
    tools:context=".activities.Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/tictactoe_bg"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="410dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="192dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="334dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Nickname"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/lsNickname"
                android:layout_width="340dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:hint="Fulano123"
                android:inputType="text"
                android:textColor="#FFFFFF"
                android:textColorHint="#80FFFFFF"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="410dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.422">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="334dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Senha"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/lsPassword"
                android:layout_width="340dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:hint="supersecretpassword"
                android:inputType="textPassword"
                android:textColor="#FFFFFF"
                android:textColorHint="#80FFFFFF"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/signUpActivityLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cadastre-se"
            android:textColor="#ff6750a4"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/loginBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.888"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
            app:layout_constraintVertical_bias="0.017" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:text="@string/login"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
            app:layout_constraintVertical_bias="0.923" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>