<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFA941"
    tools:context=".activities.SignUp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/tictactoe_bg"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <Button
            android:id="@+id/signupbtn"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:text="@string/cadastrar"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.923" />

        <LinearLayout
            android:layout_width="410dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="334dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Nickname"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/suNickname"
                android:layout_width="340dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:hint="Fulano123"
                android:inputType="text"
                android:textColor="#FFFFFF"
                android:textColorHint="#80FFFFFF"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="410dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="334dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Senha"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/suPassword"
                android:layout_width="340dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:hint="supersecretpassword"
                android:inputType="textPassword"
                android:textColor="#FFFFFF"
                android:textColorHint="#80FFFFFF"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="410dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="184dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/signupbtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="334dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Confirme sua senha"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/suPasswordConfirm"
                android:layout_width="340dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:hint="supersecretpassword"
                android:inputType="textPassword"
                android:textColor="#FFFFFF"
                android:textColorHint="#80FFFFFF"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="410dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="334dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Email"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/suEmail"
                android:layout_width="340dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:hint="example@gmail.com"
                android:inputType="textEmailAddress"
                android:textColor="#FFFFFF"
                android:textColorHint="#80FFFFFF"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="Cadastro"
            android:textColor="#FFFFFF"
            android:textSize="24dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.111"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="Preencha os campos abaixo"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.167"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="113dp"
            android:textColor="#FFFFFF"
            android:text="Já tem uma conta?"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/signupbtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.119"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
            app:layout_constraintVertical_bias="0.519" />

        <TextView
            android:id="@+id/loginActivityLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Clique aqui"
            android:textColor="#ff6750a4"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/signupbtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.034"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
            app:layout_constraintVertical_bias="0.154" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>